--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^3.2.4"
   },
   "dependencies": {
-    "nanoid": "^4.0.0"
+    "nanoid": "^4.0.0",
+    "sortablejs": "^1.15.0"
   }
 }
